2006-08-17  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Added beginnings of GPtrArray (alloc, free, add, iterate)

	* src/glib.h: Added GPtrArray signatures

	* src/Makefile.am: Added gptrarray.c to build

	* test/ptrarray.c:
	* test/tests.h:
	* test/driver.c:
	* test/Makefile.am: Add ptrarray tests for available functionality

2006-08-17  Aaron Bockover  <abockover@novell.com>
	
	* test/test.h: 
	* test/test.c: Added group iterator/test driver functionality
	
	* test/driver.c: Added groups to run using new test functionality
	
	* test/slist.h:
	* test/hashtable.h:
	* test/string-util.h: Test group definitions for string util/hashtable

	* test/slist.c:
	* test/str.c: 
	* test/hash.c: Added test definition table 

	* test/Makefile.am: Added -Wall -Werror -D_FORTIFY_SOURCE=2

	* src/gstr.c: Added implementation for g_str_has_prefix, g_str_has_suffix

	* src/glib.h: Added missing function signatures

	* src/Makefile.am: added -D_FORTIFY_SOURCE=2 

2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c (g_slist_remove_link): I misread the function
	signature. Re-implemented.
	(g_slist_delete_link): Implemented.
	(g_slist_reverse): Implemented.
	(g_slist_insert_sorted): Implemented.

2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c (g_slist_find): 
	(g_slist_length):
	(g_slist_remove):
	(g_slist_remove_link): Implemented.

	* test/slist.c: Tests for GSList.

2006-08-17  Raja R Harinath  <harinath@gmail.com>

	* src/gslist.c (g_slist_free_1): New.  Free a single list node.
	(g_slist_free): Use it to free the list nodes.  Don't free the
	data, since the list doesn't own it.
	(g_slist_append): Convert into a one-liner.
	(g_slist_foreach): Remove redundant null check.
	(g_slist_last): Actually return the last node.
	(g_slist_copy): Simplify.
	* src/gslist.h (g_slist_free_1): Add.

2006-08-16  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c:

	* src/gslist.h: First attempt at implementing GSList, incomplete.
