@@ -1,13 +1,15 @@
 noinst_LTLIBRARIES = libeglib.la
 
 libeglib_la_SOURCES = \
-	ghashtable.c \
-	gmem.c       \
-	gmodule.c    \
-	goutput.c    \
-	gstr.c       \
-	gslist.c     \
-	gstring.c    \
+	eglib-config.h	\
+	glib.h	     	\	
+	ghashtable.c 	\
+	gmem.c       	\
+	gmodule.c    	\
+	goutput.c    	\
+	gstr.c       	\
+	gslist.c     	\
+	gstring.c    	\
 	gptrarray.c
 
 libeglib_la_CFLAGS = -Wall -Werror -D_FORTIFY_SOURCE=2
@@ -18,3 +20,4 @@ libeglib_la_LIBADD = -lm
 
 MAINTAINERCLEANFILES = Makefile.in
 
+EXTRA_DIST = eglib-config.h.in
